[tool.poetry]
name = "khoald_nexus_test"
version = "0.1.0"
description = "test successfully"
authors = ["Lê Duy Khoa <leduykhoa060690@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pytesseract = "^0.3.7"
opencv-python = "^4.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
